Fix profile layout on small screens #1090

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -23,6 +23,7 @@
 
     #cp-app-profile-header {
         display: flex;
+        flex-flow: row wrap;
         #cp-app-profile-rightside {
             flex: 1;
             display: flex;
@@ -153,6 +154,7 @@
         position: relative;
         font-size: 16px;
         margin-bottom: 20px;
+        margin-top: 1em;
         .cp-app-profile-description-code {
             display: none;
         }
